# ohtu_palautukset

./: README.md
viikko1/nhl-statistics-1/src/: statistics.py
viikko2/: pyproject.toml
viikko3/login-robot/src/tests/: login.robot
viikko3/nhl-reader/src/: index.py  player.py
viikko3/web-login-robot/src/tests/: login.robot  resource.robot
viikko5/laskin/src/: kayttoliittyma.py  sovelluslogiikka.py
viikko5/tennis/src/: tennis_game.py
