[tool.poetry]
name = "viikko2"
version = "0.1.0"
description = ""
authors = ["Tatu Sorjonen <tatu.sorjonen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pylint = "^2.15.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
